--- a/index.css
+++ b/index.css
@@ -8,24 +8,16 @@
 p{
     color:rgb(66,69,75);
 }
-.mynavbar h2{
-    margin: 10px 0px 0px 10px;
-}
-@media screen and (max-width: 480px) {
-    .mynavbar h2{
-        position: relative;
-        margin: 2px 0px 20px 20px;
-    }
-}
 ul{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
     text-align: center;
     font-size: large;
     list-style: none;
 }
 li{
-    display: inline-block;
-    margin: 16px 9px 9px 9px;
-
+    list-style: none;
 }
  li a{
     text-decoration: none;
@@ -132,7 +124,7 @@ li a:hover{
     margin: 1%;    
 }
 #myfirstimg{
-    background-image: url(hero-image01.png);
+    background-image: url(img/hero-image01.png);
     height: 700px;
     background-repeat: no-repeat;
     background-size: contain;
@@ -228,17 +220,6 @@ margin: 130px 0px 0px 80px;
     text-align: justify;
 }
 }
-/* @media screen and (max-width: 600px) {
-    #upcomingbookcontainer{
-    width: 90%;
-    margin: 60px 0px 20px 20px;
-    }
-    #upcomingbookcontainer2{
-    width: 90%;
-    margin: 50px 0px 0px 20px;
-    text-align: justify;
-    }
-} */
 .img05{
     position: absolute;
     height: 410px;
@@ -279,6 +260,20 @@ margin: 130px 0px 0px 80px;
 }
 .statementdiv p{
     color: white;
+}
+.ebookcontainer{
+    display: flex;
+    margin: 40px 0px 40px 0px;
+}
+.ebookcontainer img{
+    height: 30vh;
+    width: 20%;
+    object-fit: cover;
+}
+@media screen and (max-width: 1120px) {
+.ebookcontainer img{
+    height: 10vh;
+}
 }
 .contactdiv{
     position: relative;
